[package]
name = "geet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }

thiserror = "1.0.48"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "tracing-log",
] }

git2 = { version = "0.18.0", default-features = false }
russh = "0.38.0"
russh-keys = "0.38.0"
openssh-keys = "0.6.2"

parse-display = "0.8.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
serde_with = "3.3.0"

[dev-dependencies]
rstest = "0.18.2"
