[package]
name = "geet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }

clap = { version = "4.4.2", features = ["derive", "env"] }
thiserror = "1.0.48"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "tracing-log",
] }

git2 = { version = "0.18.0", default-features = false }
russh = { version = "0.38.0", features = ["openssl"] }
russh-keys = { version = "0.38.0", features = ["openssl"] }
openssh-keys = "0.6.2"

strum = { version = "0.25.0", features = ["derive"] }
parse-display = "0.8.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = "3.3.0"
toml = { version = "0.8.0", features = ["preserve_order"] }
nonempty = { version = "0.8.1", features = ["serde", "serialize"] }

[dev-dependencies]
rstest = "0.18.2"
